--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -5,7 +5,7 @@ $royal-blue: #4169E1 !default;
 $black: #000000 !default;
 
 $link-color: $dodger-blue !default;
-$link-color-visited: $midnight-blue !default;
+$link-color-visited: $royal-blue !default;
 $body-color: $white-smoke !default;
-$header-color: $royal-blue !default;
+$header-color: $midnight-blue !default;
 $text-color: $black !default;
