--- a/scss/modules/buttons.scss
+++ b/scss/modules/buttons.scss
@@ -1,16 +1,5 @@
 /*Button Modules*/
 
-/*.btn-main {
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-  float: left;
-  @include fullhd-and-above {
-    margin-left: 44px;
-    margin-top: 150px;
-  }
-}*/
-
 .btn-main > img {
   position: relative;
   @include fullhd-and-above {
